--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCKTYPE html>
+<html lang="fi">
+  <head>
+      <meta charset="UTF-8">
+      <Title>Niksun Portfolio</Title>
+  </head>
+  <body>
+    <h1>Hei!</h1>
+      <p>Tämä on minun portfolioni!</p>
+  </body>
+</html>
